--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    implementation group: 'com.google.code.gson', name:'gson', version: '2.7'
+    runtimeOnly group: 'org.postgresql', name: 'postgresql', version: '42.2.18'
 }
 test {
     useJUnitPlatform()
